# chat_aps

./: README.md  client.py  equipes.db  main.py  pyproject.toml  server.py
client/: pyproject.toml
client/src/: app.py  client.py
client/src/core/: auth.py  config.py  local_cash.py  message_queue.py
client/src/core/exceptions/: auth_error.py
client/src/network/: file_client.py  ws_client.py
client/src/ui/: chat_window.py  contact_list.py  input_bar.py  login_window.py  message_area.py  message_bubble.py
client/src/utils/: image_preview.py  notifications.py
