[project]
name = "chat-aps"
version = "0.1.0"
description = ""
authors = [
    {name = "Jhonatan Vieira Diniz"},
	{name = "Yáskara Santangelo"}
]
requires-python = ">=3.13"
dependencies = [
    "pillow (>=12.2.0,<13.0.0)"
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
