[project]
name = "comunicacao-redes"
version = "0.1.0"
description = "Ferramenta de comuncacao em rede"
requires-python =">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
]

gui = [
    "customtkinter>=5.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["comunicacao_redes*"]

[tool.ruff]
line-length = 88
target-version = "py310"